<resources>
	<string name="app_name">sumullab8_9</string>
	<string name="start">start</string>
	<string name="redo">redo</string>
	<string name="howfast">howfast</string>
	<string name="usddiff">usd diff</string>
	<string name="rubdiff">rubdiff</string>
	<string name="days">days</string>
	<string name="startingRateRub">st rate rub</string>
	<string name="startingRateUsd">st rate usd</string>
	<string name="stop">stop</string>
</resources>