<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<com.github.mikephil.charting.charts.LineChart
		android:id="@+id/chart"
		android:layout_width="match_parent"
		android:layout_height="500dp"
		app:layout_constraintTop_toTopOf="parent" />


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@id/chart">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintTop_toBottomOf="@id/chart">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/rateUsd_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="150dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/chart">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_startingRateUsd"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/startingRateUsd"
					android:inputType="number|numberDecimal" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/rateRub_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="150dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/chart">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_startingRateRub"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/startingRateRub"
					android:inputType="number|numberDecimal" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/days_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="150dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/chart">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_days"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/days"
					android:inputType="number" />
			</com.google.android.material.textfield.TextInputLayout>


		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

			android:orientation="vertical"
			app:layout_constraintTop_toBottomOf="@id/chart">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/rubdiff_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="150dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/chart">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_rubdiff"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/rubdiff"
					android:inputType="number|numberDecimal" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/usddiff_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="150dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/chart">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_usddiff"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/usddiff"
					android:inputType="number|numberDecimal" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/howfast_l"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="150dp"

				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/chart">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/ed_howfast"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/howfast"
					android:inputType="number|numberDecimal" />
			</com.google.android.material.textfield.TextInputLayout>


		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<Button
				android:id="@+id/btStart"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/start" />

			<Button
				android:id="@+id/btRedo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/redo" />
		</LinearLayout>
	</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>